[package]
name = "umiarkowanie-nowy-swiat"
version = "0.1.0"
authors = ["Michał Sidor <public+git@meekchopp.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.9", features = ["stream"] }
paho-mqtt = "0.8.0"
tokio = { version = "0.2.5", features = ["macros"] }
