[package]
name = "umiarkowanie-nowy-swiat"
version = "0.1.1"
authors = ["Michał Sidor <public+git@meekchopp.es>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", default-features = false, features = ["stream", "rustls-tls"] }
paho-mqtt = "0.9.1"
tokio = { version = "1.4.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.5"
